--- a/index.html
+++ b/index.html
@@ -17,38 +17,33 @@
 
     <div class="container-fluid hero">
         <div class="container">
-
             <nav class="navbar navbar-expand-lg navbar-light  p-0 pt-5">
-                <a class="navbar-brand mr-5" href="#">LOGO</a>
+                <a class="navbar-brand mr-5" href="">LOGO</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item mr-4">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="">Home</a>
                         </li>
                         <li class="nav-item mr-4">
-                            <a class="nav-link" href="#">How it Works</a>
+                            <a class="nav-link" href="">How it Works</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link" href="">Pricing</a>
                         </li>
                     </ul>
                 </div>
-
-                <button class="border-0 b-border btn btn-no-bg my-2 my-sm-0 mr-3 btn-small" type="submit">Login</button>
+                <button class="b-border btn btn-no-bg my-2 my-sm-0 mr-3 btn-small" type="submit">Login</button>
                 <button class="border-0 b-border btn btn-red my-2 my-sm-0 btn-small" type="submit">Create account</button>
-
             </nav>
-
-
             <div class="row  main-padding">
                 <div class="col-md-6">
                     <h1 class="hero-title main-blue m-0 mb-4">
                         Bulk SMS Service for Your Business
                     </h1>
-                    <div class="hero-lead">Focus more on your business while we handle your customers. Try our service — send your first 10 SMS for free!</div>
+                    <div class="hero-lead">Try our service — send your first 10 SMS for free! Focus more on your business while we handle your customers. </div>
                     <div class="mt-5">
                         <a href="" class="b-border main-btn btn-primary main-btn btn-red d-inline-block">Request a
                             demo</a>
@@ -60,6 +55,18 @@
             </div>
         </div>
     </div>
+
+    <section class="section-one">
+        <div class="contaniner-fluid">
+            <div class="container sec-padding">
+                <div class="text-center">
+                    <h1 class="section-title main-blue m-0 mb-4 w-50 m-auto">
+                        Send SMS Campaigns to your customers in <span class="section-span">less time</span>
+                    </h1>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="assets/vendors/jquery/jquery-3.5.1.min.js"></script>
