--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item mr-4">
-                            <a class="nav-link" href="">Home</a>
+                            <a class="nav-link main-blue" href="">Home</a>
                         </li>
                         <li class="nav-item mr-4">
-                            <a class="nav-link" href="">How it Works</a>
+                            <a class="nav-link main-blue" href="">How it Works</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Pricing</a>
+                            <a class="nav-link main-blue" href="">Pricing</a>
                         </li>
                     </ul>
                 </div>
@@ -61,7 +61,7 @@
             <div class="container sec-padding">
                 <div class="text-center">
                     <h1 class="section-title main-blue m-0 mb-4 w-50 m-auto">
-                        Send SMS Campaigns to your customers in <span class="section-span">less time</span>
+                        Send SMS campaigns to your customers in <span class="section-span"> less time</span>
                     </h1>
                 </div>
             </div>
