--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
                         </li>
                     </ul>
                 </div>
-                <button class="b-border btn btn-no-bg my-2 my-sm-0 mr-3 btn-small" type="submit">Login</button>
-                <button class="border-0 b-border btn btn-red my-2 my-sm-0 btn-small" type="submit">Create account</button>
+
+                <a href="" class="b-border btn btn-no-bg my-2 my-sm-0 mr-3 btn-small">Login</a>
+                <a href="" class="border-0 b-border btn btn-red my-2 my-sm-0 btn-small">Create account</a>
+
             </nav>
             <div class="row  main-padding">
                 <div class="col-md-6">
                     <h1 class="hero-title main-blue m-0 mb-4">
                         Bulk SMS Service for Your Business
                     </h1>
-                    <div class="hero-lead">Try our service — send your first 10 SMS for free! Focus more on your business while we handle your customers. </div>
+                    <div class="hero-lead">Try our service — send your first 10 SMS for free!<br> Focus more on your business while we handle your customers delivery. </div>
                     <div class="mt-5">
-                        <a href="" class="b-border main-btn btn-primary main-btn btn-red d-inline-block">Request a
-                            demo</a>
+                        <a href="" class="b-border main-btn btn-primary main-btn btn-red d-inline-block">Get Started</a>
                     </div>
                 </div>
                 <div class="col-md-6">
-
                 </div>
             </div>
         </div>
