--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/vendors/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/vendors/normalize/normalize.min.css">
+    <link rel="stylesheet" href="assets/vendors/aos/aos.css">
 </head>
 
 <body>
 
-    <div class="container-fluid hero">
+    <div class="container-fluid hero position-relative overflow-hidden">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light  p-0 pt-5">
-                <a class="navbar-brand mr-5" href="">LOGO</a>
+                <a class="navbar-brand mr-5" href="">
+                    LOGO
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -28,7 +31,7 @@
                             <a class="nav-link main-blue" href="">Home</a>
                         </li>
                         <li class="nav-item mr-4">
-                            <a class="nav-link main-blue" href="">How it Works</a>
+                            <a class="nav-link main-blue" href="">How it works</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link main-blue" href="">Pricing</a>
@@ -36,21 +39,33 @@
                     </ul>
                 </div>
 
-                <a href="" class="b-border btn btn-no-bg my-2 my-sm-0 mr-3 btn-small">Login</a>
-                <a href="" class="border-0 b-border btn btn-red my-2 my-sm-0 btn-small">Create account</a>
+                <a href="" class="b-border btn btn-no-bg my-2 my-sm-0 btn-small mr-3">Log in</a>
+                <a href="" class="border-0 b-border btn btn-red my-2 my-sm-0 btn-small mr-3 shadow-sm">Create
+                    account</a>
+                <a href="" class=""><img src="assets/img/flags/tz.png" width="25" height="25" style="border-radius: 100px;" title="Proudly Tanzania"></a>
 
             </nav>
-            <div class="row  main-padding">
-                <div class="col-md-6">
+            <div class="row">
+                <div class="col-md-6 main-padding">
                     <h1 class="hero-title main-blue m-0 mb-4">
                         Bulk SMS Service for Your Business
                     </h1>
-                    <div class="hero-lead">Try our service — send your first 10 SMS for free!<br> Focus more on your business while we handle your customers delivery. </div>
-                    <div class="mt-5">
-                        <a href="" class="b-border main-btn btn-primary main-btn btn-red d-inline-block">Get Started</a>
+                    <div class="hero-lead w-75">Focus more on your business while we handle your customers delight.
+                    </div>
+                    <div class="mt-6">
+                        <a href="" class="b-border main-btn btn-primary main-btn btn-red d-inline-block shadow-sm">Get
+                            Started</a>
                     </div>
                 </div>
                 <div class="col-md-6">
+                    <div class="hero-image-container">
+                        <div class="hero-image-extra position-relative">
+                            <img src="assets/img/chat.png" class="extra-one shadow-sm position-absolute" data-aos="fade-up" data-aos-delay="300">
+                            <img src="assets/img/chat-02.png" class="extra-two shadow-sm position-absolute" data-aos="fade-up" data-aos-delay="500">
+                        </div>
+                        <img src="assets/img/hero-image.png" width="400" class="position-absolute hero-image">
+                    </div>
+                    <img src="assets/img/svg-shape-01.svg" class="svg-shape">
                 </div>
             </div>
         </div>
@@ -63,15 +78,19 @@
                     <h1 class="section-title main-blue m-0 mb-4 w-50 m-auto">
                         Send SMS campaigns to your customers in <span class="section-span"> less time</span>
                     </h1>
+                    <!-- <div class="hero-lead w-50 m-auto">Try our service — send your first 10 SMS for free!</div> -->
                 </div>
             </div>
         </div>
     </section>
 
-
     <script src="assets/vendors/jquery/jquery-3.5.1.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/vendors/aos/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
 </body>
 
 </html>
