--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>PamojaSMS</title>
+    <title>PamojaSMS :: Bulk SMS Service </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/main.css">
@@ -40,8 +40,9 @@
                 </div>
 
                 <a href="" class="b-border btn btn-no-bg my-2 my-sm-0 btn-small mr-3">Log in</a>
-                <a href="" class="border-0 b-border btn btn-red my-2 my-sm-0 btn-small mr-3 shadow-sm">Create
-                    account</a>
+                <a href="" class="border-0 b-border btn btn-red my-2 my-sm-0 btn-small mr-3 shadow-sm">
+                    Create account
+                </a>
                 <a href="" class=""><img src="assets/img/flags/tz.png" width="25" height="25" style="border-radius: 100px;" title="Proudly Tanzania"></a>
 
             </nav>
@@ -53,8 +54,11 @@
                     <div class="hero-lead w-75">Focus more on your business while we handle your customers delight.
                     </div>
                     <div class="mt-6">
-                        <a href="" class="b-border main-btn btn-primary main-btn btn-red d-inline-block shadow-sm">Get
-                            Started</a>
+                        <img src="assets/img/left.svg">
+                        <a href="" class="b-border main-btn btn-primary main-btn btn-red d-inline-block shadow-sm">
+                            Get Started
+                        </a>
+                        <img src="assets/img/right.svg">
                     </div>
                 </div>
                 <div class="col-md-6">
