--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="container-fluid hero position-relative overflow-hidden">
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light  p-0 pt-5">
+            <nav class="navbar navbar-expand-lg navbar-light p-0 pt-4">
                 <a class="navbar-brand mr-5" href="">
                     LOGO
                 </a>
@@ -51,7 +51,7 @@
                     <h1 class="hero-title main-blue m-0 mb-4">
                         Bulk SMS Service for Your Business
                     </h1>
-                    <div class="hero-lead w-75">Focus more on your business while we handle your customers delight.
+                    <div class="hero-lead w-75">Focus more on your business while we handle your customers delight 24/7.
                     </div>
                     <div class="mt-6">
                         <img src="assets/img/left.svg">
@@ -78,15 +78,28 @@
     <section class="section-one">
         <div class="contaniner-fluid">
             <div class="container sec-padding">
+
                 <div class="text-center">
+                    <!-- <span class="m-auto title-head badge badge-info">HOW IT WORKS</span>
+                    <div class="mt-2 mb-2"></div> -->
                     <h1 class="section-title main-blue m-0 mb-4 w-50 m-auto">
-                        Send SMS campaigns to your customers in <span class="section-span"> less time</span>
+                        Send SMS campaigns to your customers in <span class="section-span">4 easy steps</span>
                     </h1>
-                    <!-- <div class="hero-lead w-50 m-auto">Try our service — send your first 10 SMS for free!</div> -->
                 </div>
+
             </div>
         </div>
     </section>
+
+
+    <!-- 
+    <footer class="container-fluid blue-bg">
+        <div class="container sec-padding">
+            <div class="row">
+
+            </div>
+        </div>
+    </footer> -->
 
     <script src="assets/vendors/jquery/jquery-3.5.1.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.min.js"></script>
