--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>PamojaSMS :: Bulk SMS Service </title>
+    <title>Bulk SMS Service | PamojaSMS</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Main -->
     <link rel="stylesheet" href="assets/css/main.css">
+    <!-- Vendors -->
     <link rel="stylesheet" href="assets/vendors/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/vendors/normalize/normalize.min.css">
     <link rel="stylesheet" href="assets/vendors/aos/aos.css">
+    <link rel="stylesheet" href="assets/fonts/fontawesome/css/all.min.css">
 </head>
 
 <body>
 
-    <div class="container-fluid hero position-relative overflow-hidden">
+    <div class="container-fluid hero position-relative overflow-hidden main-bg">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light p-0 pt-4">
                 <a class="navbar-brand mr-5" href="">
@@ -38,14 +41,15 @@
                         </li>
                     </ul>
                 </div>
-
                 <a href="" class="b-border btn btn-no-bg my-2 my-sm-0 btn-small mr-3">Log in</a>
                 <a href="" class="border-0 b-border btn btn-red my-2 my-sm-0 btn-small mr-3 shadow-sm">
                     Create account
                 </a>
-                <a href="" class=""><img src="assets/img/flags/tz.png" width="25" height="25" style="border-radius: 100px;" title="Proudly Tanzania"></a>
-
+                <a href="">
+                    <img src="assets/img/flags/tz.png" width="23" height="18" style="border-radius: 3px;" title="Proudly Tanzania">
+                </a>
             </nav>
+
             <div class="row">
                 <div class="col-md-6 main-padding">
                     <h1 class="hero-title main-blue m-0 mb-4">
@@ -67,7 +71,7 @@
                             <img src="assets/img/chat.png" class="extra-one shadow-sm position-absolute" data-aos="fade-up" data-aos-delay="300">
                             <img src="assets/img/chat-02.png" class="extra-two shadow-sm position-absolute" data-aos="fade-up" data-aos-delay="500">
                         </div>
-                        <img src="assets/img/hero-image.png" width="400" class="position-absolute hero-image">
+                        <img src="assets/img/hero-image.png" width="400" class="position-absolute hero-image" data-aos="fade-up">
                     </div>
                     <img src="assets/img/svg-shape-01.svg" class="svg-shape">
                 </div>
@@ -75,31 +79,55 @@
         </div>
     </div>
 
-    <section class="section-one">
-        <div class="contaniner-fluid">
-            <div class="container sec-padding">
-
-                <div class="text-center">
-                    <!-- <span class="m-auto title-head badge badge-info">HOW IT WORKS</span>
-                    <div class="mt-2 mb-2"></div> -->
-                    <h1 class="section-title main-blue m-0 mb-4 w-50 m-auto">
-                        Send SMS campaigns to your customers in <span class="section-span">4 easy steps</span>
-                    </h1>
+    <div class="contaniner-fluid benefits">
+        <div class="container sec-padding space-2 space-lg-3">
+            <div class="row mt-3">
+                <div class="col-md-5 position-relative" data-aos="fade-up">
+                    <div class="section--image"></div>
+                    <img src="assets/img/dots-5.svg" class="img-fluid extra-svg">
                 </div>
+                <div class="col-md-6">
+                    <div class="pl-5">
+                        <h1 class="section-title main-blue m-0 mb-5" data-aos="fade-up">
+                            Send SMS campaigns to your customers in
+                            <span class="section-span">affordable price</span>
+                        </h1>
 
+                        <div class="benefits">
+                            <div class="benefit" data-aos="fade-up" data-aos-delay="150">
+                                <h3 class="benefit-title">HIGH-SPEED DELIVERY</h3>
+                                <div class="hero-lead w-75">Automated SMS campaigns are sent with a speed of 200-500 messages per second.</div>
+                            </div>
+
+                            <div class="benefit" data-aos="fade-up" data-aos-delay="200">
+                                <h3 class="benefit-title">SMS PERSONALIZATION</h3>
+                                <div class="hero-lead w-75">Add the recipient's name, include your brand name, and much more.
+                                </div>
+                            </div>
+
+                            <div class="benefit" data-aos="fade-up" data-aos-delay="250">
+                                <h3 class="benefit-title">SMS AUTOMATION</h3>
+                                <div class="hero-lead w-75">Schedule your SMS campaigns for a particular date and time.
+                                </div>
+                            </div>
+
+                            <a href="" class="b-border main-btn btn-primary main-btn btn-red d-inline-block shadow-sm" data-aos="fade-up" data-aos-delay="300">
+                               Try our demo
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </div>
-    </section>
+    </div>
 
 
-    <!-- 
-    <footer class="container-fluid blue-bg">
-        <div class="container sec-padding">
-            <div class="row">
 
-            </div>
-        </div>
-    </footer> -->
+    <!-- <div class="position-absolute bottom-right text-gray-800 mb-n10 mr-n8">
+                <svg width="207" height="207" viewBox="0 0 207 207" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.469 12.938A6.469 6.469 0 106.469 0a6.469 6.469 0 000 12.938zm0-1.618a4.852 4.852 0 100-9.703 4.852 4.852 0 000 9.703zM33.487 6.47l4.811-4.811L37.155.514l-4.811 4.811-4.811-4.81-1.144 1.143 4.811 4.81-4.81 4.812 1.143 1.143 4.81-4.81 4.812 4.81 1.143-1.143-4.81-4.811zm-1.143 32.343a6.469 6.469 0 100-12.937 6.469 6.469 0 000 12.938zm0-1.617a4.852 4.852 0 100-9.703 4.852 4.852 0 000 9.703zM7.612 32.344l4.811-4.811-1.143-1.144L6.469 31.2l-4.811-4.81-1.144 1.143 4.811 4.81-4.81 4.812 1.143 1.143 4.81-4.81 4.812 4.81 1.143-1.143-4.81-4.811z" fill="currentColor"></path><g clip-path="url(#decoration4clip0)"><path fill-rule="evenodd" clip-rule="evenodd" d="M109.969 12.938a6.47 6.47 0 100-12.94 6.47 6.47 0 000 12.94zm0-1.618a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm27.018-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.81-1.144 1.143 4.811 4.81-4.811 4.812 1.144 1.143 4.811-4.81 4.811 4.81 1.143-1.143-4.811-4.811zm-1.143 32.343a6.469 6.469 0 10-.001-12.937 6.469 6.469 0 00.001 12.938zm0-1.617a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm-24.732-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.81-1.144 1.143 4.811 4.81-4.811 4.812 1.144 1.143 4.811-4.81 4.811 4.81 1.143-1.143-4.811-4.811z" fill="currentColor"></path></g><g clip-path="url(#decoration4clip1)"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.469 64.688a6.469 6.469 0 100-12.938 6.469 6.469 0 000 12.938zm0-1.618a4.852 4.852 0 100-9.703 4.852 4.852 0 000 9.703zm27.018-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.81-1.144 1.143 4.811 4.81-4.81 4.812 1.143 1.143 4.81-4.81 4.812 4.81 1.143-1.143-4.81-4.811zm-1.143 32.343a6.469 6.469 0 100-12.937 6.469 6.469 0 000 12.938zm0-1.617a4.852 4.852 0 100-9.703 4.852 4.852 0 000 9.703zM7.612 84.094l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.81-1.144 1.143 4.811 4.81-4.81 4.812 1.143 1.143 4.81-4.81 4.812 4.81 1.143-1.143-4.81-4.811z" fill="currentColor"></path></g><g clip-path="url(#decoration4clip2)"><path fill-rule="evenodd" clip-rule="evenodd" d="M109.969 64.688a6.47 6.47 0 100-12.94 6.47 6.47 0 000 12.94zm0-1.618a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm27.018-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.81-1.144 1.143 4.811 4.81-4.811 4.812 1.144 1.143 4.811-4.81 4.811 4.81 1.143-1.143-4.811-4.811zm-1.143 32.343a6.469 6.469 0 10-.001-12.937 6.469 6.469 0 00.001 12.938zm0-1.617a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm-24.732-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.81-1.144 1.143 4.811 4.81-4.811 4.812 1.144 1.143 4.811-4.81 4.811 4.81 1.143-1.143-4.811-4.811z" fill="currentColor"></path></g><g clip-path="url(#decoration4clip3)"><path fill-rule="evenodd" clip-rule="evenodd" d="M58.219 12.938a6.469 6.469 0 100-12.938 6.469 6.469 0 000 12.938zm0-1.618a4.852 4.852 0 100-9.703 4.852 4.852 0 000 9.703zM85.237 6.47l4.811-4.811L88.905.514l-4.811 4.811-4.811-4.81-1.144 1.143 4.811 4.81-4.81 4.812 1.143 1.143 4.81-4.81 4.812 4.81 1.143-1.143-4.81-4.811zm-1.143 32.343a6.469 6.469 0 100-12.937 6.469 6.469 0 000 12.938zm0-1.617a4.852 4.852 0 100-9.703 4.852 4.852 0 000 9.703zm-24.732-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.81-1.144 1.143 4.811 4.81-4.81 4.812 1.143 1.143 4.81-4.81 4.812 4.81 1.143-1.143-4.81-4.811z" fill="currentColor"></path></g><g clip-path="url(#decoration4clip4)"><path fill-rule="evenodd" clip-rule="evenodd" d="M161.719 12.938a6.47 6.47 0 100-12.94 6.47 6.47 0 000 12.94zm0-1.618a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm27.018-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.81-1.144 1.143 4.811 4.81-4.811 4.812 1.144 1.143 4.811-4.81 4.811 4.81 1.143-1.143-4.811-4.811zm-1.143 32.343a6.469 6.469 0 10-.001-12.937 6.469 6.469 0 00.001 12.938zm0-1.617a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm-24.732-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.81-1.144 1.143 4.811 4.81-4.811 4.812 1.144 1.143 4.811-4.81 4.811 4.81 1.143-1.143-4.811-4.811z" fill="currentColor"></path></g><g clip-path="url(#decoration4clip5)"><path fill-rule="evenodd" clip-rule="evenodd" d="M58.219 64.688a6.469 6.469 0 100-12.938 6.469 6.469 0 000 12.938zm0-1.618a4.852 4.852 0 100-9.703 4.852 4.852 0 000 9.703zm27.018-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.81-1.144 1.143 4.811 4.81-4.81 4.812 1.143 1.143 4.81-4.81 4.812 4.81 1.143-1.143-4.81-4.811zm-1.143 32.343a6.469 6.469 0 100-12.937 6.469 6.469 0 000 12.938zm0-1.617a4.852 4.852 0 100-9.703 4.852 4.852 0 000 9.703zm-24.732-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.81-1.144 1.143 4.811 4.81-4.81 4.812 1.143 1.143 4.81-4.81 4.812 4.81 1.143-1.143-4.81-4.811z" fill="currentColor"></path></g><g clip-path="url(#decoration4clip6)"><path fill-rule="evenodd" clip-rule="evenodd" d="M161.719 64.688a6.47 6.47 0 100-12.94 6.47 6.47 0 000 12.94zm0-1.618a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm27.018-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.81-1.144 1.143 4.811 4.81-4.811 4.812 1.144 1.143 4.811-4.81 4.811 4.81 1.143-1.143-4.811-4.811zm-1.143 32.343a6.469 6.469 0 10-.001-12.937 6.469 6.469 0 00.001 12.938zm0-1.617a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm-24.732-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.81-1.144 1.143 4.811 4.81-4.811 4.812 1.144 1.143 4.811-4.81 4.811 4.81 1.143-1.143-4.811-4.811z" fill="currentColor"></path></g><g clip-path="url(#decoration4clip7)"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.469 116.438a6.47 6.47 0 10-.001-12.939 6.47 6.47 0 000 12.939zm0-1.618a4.851 4.851 0 100-9.703 4.851 4.851 0 000 9.703zm27.018-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.81 4.811 1.143 1.143 4.81-4.811 4.812 4.811 1.143-1.143-4.81-4.811zm-1.143 32.343a6.469 6.469 0 100-12.937 6.469 6.469 0 000 12.937zm0-1.617a4.851 4.851 0 100-9.703 4.851 4.851 0 000 9.703zm-24.732-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.81 4.811 1.143 1.143 4.81-4.811 4.812 4.811 1.143-1.143-4.81-4.811z" fill="currentColor"></path></g><g clip-path="url(#decoration4clip8)"><path fill-rule="evenodd" clip-rule="evenodd" d="M109.969 116.438a6.47 6.47 0 10-.002-12.94 6.47 6.47 0 00.002 12.94zm0-1.618a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm27.018-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.811 4.811 1.144 1.143 4.811-4.811 4.811 4.811 1.143-1.143-4.811-4.811zm-1.143 32.343a6.468 6.468 0 100-12.936 6.468 6.468 0 000 12.936zm0-1.617a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm-24.732-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.811 4.811 1.144 1.143 4.811-4.811 4.811 4.811 1.143-1.143-4.811-4.811z" fill="currentColor"></path></g><g clip-path="url(#decoration4clip9)"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.469 168.188a6.47 6.47 0 10-.001-12.939 6.47 6.47 0 000 12.939zm0-1.618a4.851 4.851 0 100-9.703 4.851 4.851 0 000 9.703zm27.018-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.81 4.811 1.143 1.143 4.81-4.811 4.812 4.811 1.143-1.143-4.81-4.811zm-1.143 32.343a6.469 6.469 0 100-12.937 6.469 6.469 0 000 12.937zm0-1.617a4.851 4.851 0 100-9.703 4.851 4.851 0 000 9.703zm-24.732-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.81 4.811 1.143 1.143 4.81-4.811 4.812 4.811 1.143-1.143-4.81-4.811z" fill="currentColor"></path></g><g clip-path="url(#decoration4clip10)"><path fill-rule="evenodd" clip-rule="evenodd" d="M109.969 168.188a6.47 6.47 0 10-.002-12.94 6.47 6.47 0 00.002 12.94zm0-1.618a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm27.018-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.811 4.811 1.144 1.143 4.811-4.811 4.811 4.811 1.143-1.143-4.811-4.811zm-1.143 32.343a6.468 6.468 0 100-12.936 6.468 6.468 0 000 12.936zm0-1.617a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm-24.732-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.811 4.811 1.144 1.143 4.811-4.811 4.811 4.811 1.143-1.143-4.811-4.811z" fill="currentColor"></path></g><g clip-path="url(#decoration4clip11)"><path fill-rule="evenodd" clip-rule="evenodd" d="M58.219 116.438a6.47 6.47 0 10-.002-12.939 6.47 6.47 0 00.002 12.939zm0-1.618a4.851 4.851 0 100-9.703 4.851 4.851 0 000 9.703zm27.018-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.81 4.811 1.143 1.143 4.81-4.811 4.812 4.811 1.143-1.143-4.81-4.811zm-1.143 32.343a6.469 6.469 0 100-12.937 6.469 6.469 0 000 12.937zm0-1.617a4.851 4.851 0 100-9.703 4.851 4.851 0 000 9.703zm-24.732-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.81 4.811 1.143 1.143 4.81-4.811 4.812 4.811 1.143-1.143-4.81-4.811z" fill="currentColor"></path></g><g clip-path="url(#decoration4clip12)"><path fill-rule="evenodd" clip-rule="evenodd" d="M161.719 116.438a6.47 6.47 0 10-.002-12.94 6.47 6.47 0 00.002 12.94zm0-1.618a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm27.018-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.811 4.811 1.144 1.143 4.811-4.811 4.811 4.811 1.143-1.143-4.811-4.811zm-1.143 32.343a6.468 6.468 0 100-12.936 6.468 6.468 0 000 12.936zm0-1.617a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm-24.732-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.811 4.811 1.144 1.143 4.811-4.811 4.811 4.811 1.143-1.143-4.811-4.811z" fill="currentColor"></path></g><g clip-path="url(#decoration4clip13)"><path fill-rule="evenodd" clip-rule="evenodd" d="M58.219 168.188a6.47 6.47 0 10-.002-12.939 6.47 6.47 0 00.002 12.939zm0-1.618a4.851 4.851 0 100-9.703 4.851 4.851 0 000 9.703zm27.018-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.81 4.811 1.143 1.143 4.81-4.811 4.812 4.811 1.143-1.143-4.81-4.811zm-1.143 32.343a6.469 6.469 0 100-12.937 6.469 6.469 0 000 12.937zm0-1.617a4.851 4.851 0 100-9.703 4.851 4.851 0 000 9.703zm-24.732-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.81 4.811 1.143 1.143 4.81-4.811 4.812 4.811 1.143-1.143-4.81-4.811z" fill="currentColor"></path></g><g clip-path="url(#decoration4clip14)"><path fill-rule="evenodd" clip-rule="evenodd" d="M161.719 168.188a6.47 6.47 0 10-.002-12.94 6.47 6.47 0 00.002 12.94zm0-1.618a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm27.018-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.811 4.811 1.144 1.143 4.811-4.811 4.811 4.811 1.143-1.143-4.811-4.811zm-1.143 32.343a6.468 6.468 0 100-12.936 6.468 6.468 0 000 12.936zm0-1.617a4.851 4.851 0 100-9.702 4.851 4.851 0 000 9.702zm-24.732-4.851l4.811-4.811-1.143-1.144-4.811 4.811-4.811-4.811-1.144 1.144 4.811 4.811-4.811 4.811 1.144 1.143 4.811-4.811 4.811 4.811 1.143-1.143-4.811-4.811z" fill="currentColor"></path></g><defs><clipPath id="decoration4clip7"><path fill="#fff" d="M0 103.5h51.75v51.75H0z"></path></clipPath><clipPath id="decoration4clip0"><path fill="#fff" d="M103.5 0h51.75v51.75H103.5z"></path></clipPath><clipPath id="decoration4clip2"><path fill="#fff" d="M103.5 51.75h51.75v51.75H103.5z"></path></clipPath><clipPath id="decoration4clip3"><path fill="#fff" d="M51.75 0h51.75v51.75H51.75z"></path></clipPath><clipPath id="decoration4clip4"><path fill="#fff" d="M155.25 0H207v51.75h-51.75z"></path></clipPath><clipPath id="decoration4clip5"><path fill="#fff" d="M51.75 51.75h51.75v51.75H51.75z"></path></clipPath><clipPath id="decoration4clip6"><path fill="#fff" d="M155.25 51.75H207v51.75h-51.75z"></path></clipPath><clipPath id="decoration4clip1"><path fill="#fff" d="M0 51.75h51.75v51.75H0z"></path></clipPath><clipPath id="decoration4clip8"><path fill="#fff" d="M103.5 103.5h51.75v51.75H103.5z"></path></clipPath><clipPath id="decoration4clip9"><path fill="#fff" d="M0 155.25h51.75V207H0z"></path></clipPath><clipPath id="decoration4clip10"><path fill="#fff" d="M103.5 155.25h51.75V207H103.5z"></path></clipPath><clipPath id="decoration4clip11"><path fill="#fff" d="M51.75 103.5h51.75v51.75H51.75z"></path></clipPath><clipPath id="decoration4clip12"><path fill="#fff" d="M155.25 103.5H207v51.75h-51.75z"></path></clipPath><clipPath id="decoration4clip13"><path fill="#fff" d="M51.75 155.25h51.75V207H51.75z"></path></clipPath><clipPath id="decoration4clip14"><path fill="#fff" d="M155.25 155.25H207V207h-51.75z"></path></clipPath></defs></svg>
+            </div> -->
+
 
     <script src="assets/vendors/jquery/jquery-3.5.1.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.min.js"></script>
