--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <div class="benefit-icon mb-4 text-center">
                                 <i class="fal fa-laptop mt-3 main-green"></i>
                             </div>
-                            <h3 class="benefit-title">LOGIN TO YOUR ACCOUNT</h3>
+                            <h3 class="benefit-title">REQUEST YOUR BRAND NAME</h3>
                             <div class="hero-lead w-75">Then click "New Campaign" at the top of the dashboard to launch new SMS campaign.
                             </div>
                         </div>
