--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                 <i class="fal fa-laptop mt-3 main-green"></i>
                             </div>
                             <h3 class="benefit-title">REQUEST YOUR BRAND NAME</h3>
-                            <div class="hero-lead w-75">Then click "New Campaign" at the top of the dashboard to launch new SMS campaign.
+                            <div class="hero-lead w-75">Click "New Campaign" at the top of the dashboard to launch new SMS campaign.
                             </div>
                         </div>
                     </div>
