--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                 <i class="fal fa-laptop mt-3 main-green"></i>
                             </div>
                             <h3 class="benefit-title">REQUEST YOUR BRAND NAME</h3>
-                            <div class="hero-lead w-75">Click "New Campaign" at the top of the dashboard to launch new SMS campaign.
+                            <div class="hero-lead w-75">Register if you haven't already. Request your business name and within minutes we will verify it
                             </div>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                                 <i class="fal fa-pencil mt-3 main-green"></i>
                             </div>
                             <h3 class="benefit-title">CREATE YOUR CAMPAIGN</h3>
-                            <div class="hero-lead w-75">Add manually or import your recipients numbers, write down your sms and manage it.
+                            <div class="hero-lead w-75">Click "New Campaign" at the top of the dashboard to launch new SMS campaign
                             </div>
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                                 <i class="fal fa-thumbs-up mt-3 main-green"></i>
                             </div>
                             <h3 class="benefit-title">CLICK SEND</h3>
-                            <div class="hero-lead w-75">Now all you have to do is to click "Send SMS" and you are done. We will handle the rest.
+                            <div class="hero-lead w-75">Now all you have to do is to click "Send SMS" and you are done. We will handle the rest
                             </div>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                 People read 98% of all SMS delivered to their mobile phones
             </h2>
 
-            <div class="hero-lead text-center mt-3">Add manually or import your receivers numbers, write down your sms and schedule it.
+            <div class="hero-lead text-center mt-3">Don't let your customers hanging anymore, reach them wherever they are, anytime
             </div>
 
             <div class="text-center mt-4">
